--- a/modelo/vista/captura.html
+++ b/modelo/vista/captura.html
@@ -2,47 +2,23 @@
 <html>
 	<head>
 		<title>Datos personales</title>
+		<link rel="stylesheet" type="text/css" href="../../css/misEstilos.css">
 	</head>
 	<body>
 		<div>
-			<table border="1" width="200">
-				<tr><td>Nombre</td> <td width="100"></td></tr>
-				<tr><td>Apellido</td> <td width="100"></td></tr>
-				<tr><td>Edad</td> <td width="100"></td></tr>
-			</table>
-			<p/>
+			<h1>Consulta de alumnos </h1>
 			<form id="Personal">
 				<fieldset>
 					<legend>Datos Personales</legend>
-					<p>Nombre: <input type="text" id="nombre"></p>
-					<p>Apellidos: <input type="text" id="apellidos"></p>
-					<p>Edad: <input type="text" id="edad"></p>
-					<p>Clave: <input type="password" id="clave"></p>
-					<p>Sexo:</p>
-					<p><input type="checkbox" id="macho" value="m"> Macho </p>
-					<p><input type="checkbox" id="hembra" value="h"> Hembra </p>
+					<label>Nombre: <input type="text" id="nombre"></label>
+					<label>Apellidos: <input type="text" id="apellidos"></label>
+					<label>Edad: <input type="text" id="edad"></label>
+					<label>Clave: <input type="password" id="clave"></label><br>
+					<label>Sexo:</label><br>
+					<input type="checkbox" id="macho" value="m"> <label>Macho</label><br>
+					<input type="checkbox" id="hembra" value="h"> <label>Hembra</label>
 				</fieldset>
-				<fieldset>
-					<legend>Estudios</legend>
-					<p><input type="checkbox" id="bachiller"> Bachiller </p>
-					<p><input type="checkbox" id="licenciatura"> Licenciatura </p>
-					<p>Comentarios:</p>
-					<textarea name="Descripcion" cols="12" rows="4"></textarea>
-				</fieldset>
-				<fieldset>
-					<legend>Dirección</legend>
-					<p>Estado:</p>
-					<p>
-						<select name="estado">
-							<optgroup>
-								<option>Yucatán</option>
-								<option>Campeche</option>
-							</optgroup>
-						</select>
-					</p>
-				</fieldset>
-				<p>Foto: </p>
-				<input type="submit" value="guardar">
+				<input type="submit" value="Guardar">
 			</form>
 		</div>
 		<br>
